--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -34,11 +34,10 @@ jobs:
         run: |
           npm install
 
-      - name: Set Qase Run Title with GitHub Link
+      - name: Set Qase Run Description with GitHub Link
         run: |
-          BRANCH_NAME=${GITHUB_REF##*/}
           GITHUB_LINK="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          echo "QASE_TESTOPS_RUN_TITLE=qase-cypress@$BRANCH_NAME - $GITHUB_LINK" >> $GITHUB_ENV
+          echo "QASE_TESTOPS_RUN_DESCRIPTION=[GitHub Action Run]($GITHUB_LINK)" >> $GITHUB_ENV
 
       - name: Run Cypress tests
         run: |
