--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -41,6 +41,9 @@ jobs:
           environment: my-env
           milestone: 123
           plan: 321
+          
+      - name: Set Qase Run Title
+        run: echo "QASE_TESTOPS_RUN_TITLE=Manual API trigger" >> $GITHUB_ENV
 
       - name: Run tests
         env:
