--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           npm install
 
-      - name: Set Qase Run Description with GitHub Link
+      - name: Set Qase Run Description with Github Link
         run: |
           GITHUB_LINK="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           echo "QASE_TESTOPS_RUN_DESCRIPTION=[GitHub Action Run]($GITHUB_LINK)" >> $GITHUB_ENV
